Updates to responsive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>PING 2</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -42,12 +42,12 @@
 						</div>
 						<div class="features">
 							<section>
-								<span class="icon fa-camera-retro major accent2"></span>
+								<span class="icon fa-users major accent2"></span>
 								<h3>Kunstnere</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu lacus imperdiet, cursus erat vitae, dictum nulla.</p>
 							</section>
 							<section>
-								<span class="icon fa-diamond major accent3"></span>
+								<span class="icon fa-exclamation-triangle major accent3"></span>
 								<h3>Kulsejlet økonomi</h3>
 								<p>Ut ultrices hendrerit dignissim euismod. Fusce a sem interdum, elementum quam vitae, hendrerit lorem eget.</p>
 							</section>
@@ -57,17 +57,17 @@
 								<p>Donec hendrerit, orci nec eleifend auctor, ipsum pharetra leo, eu imperdiet mauris sem id tellus. In at ex efficitur.</p>
 							</section>
 							<section>
-								<span class="icon fa-rss major accent1"></span>
+								<span class="icon fa-user-secret major accent1"></span>
 								<h3>Fortrolige hænder</h3>
 								<p>Faucibus ligula, ac blandit purus arcu non sed nibh. Nam aliquam in erat a ultricies. Vivamus leo est lorem finibus.</p>
 							</section>
 							<section>
-								<span class="icon fa-commenting-o major accent2"></span>
+								<span class="icon fa-heart major accent2"></span>
 								<h3>Trygge omgivelser</h3>
 								<p>Fermentum integer laoreet sollicitudin tortor et consequat. Phasellus eu lectus. Sed libero quam vehicula eleifend.</p>
 							</section>
 							<section>
-								<span class="icon fa-files-o major accent3"></span>
+								<span class="icon fa-thumbs-up major accent3"></span>
 								<h3>Rettidig omhu</h3>
 								<p>Quisque nec mollis turpis. Phasellus sit amet magna ut quam lacinia interdum. Phasellus varius lobortis dui. </p>
 							</section>
